--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -146,28 +146,30 @@
     "mrqx_extra_pack.msg.fission_reactor.2": "核反应已在进行！",
     "mrqx_extra_pack.shadow_of_caerula_arbor": "深蓝之树之影",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.00": "未持有",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.01": "等级：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.02": "剩余时长：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.03": "伤害加成：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.04": "减伤：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.05": "剩余可提供资源点数：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.1": "资源值：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.2": "扭曲值：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.3": "甜蜜之梦：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.4": "龙化：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.5": "无尽节律：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.60": "熔火：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.61": "心火：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.7": "死狱之魂：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.8": "山月之魂：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.9": "噩梦醇：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a0": "核能动力：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a1": "核能发电：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b0": "末影损伤：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b1": "灼燃损伤：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b2": "冻结损伤：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b3": "雷霆损伤：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b4": "凋亡损伤：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.01": "等级：%s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.02": " | 剩余时长：%s s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.03": "伤害加成：%s%s%s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.04": "减伤：%s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.05": "剩余可提供资源点数：%s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.1": "资源值：%s / %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.2": "扭曲值：%s / %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.3": "甜蜜之梦：%s %s ",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.4": "龙化：%s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.5": "无尽节律：%s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.60": "熔火：%s %s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.61": "心火：%s %s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.7": "死狱之魂：%s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.8": "山月之魂：%s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.9": "噩梦醇：%s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a0": "核能动力：%s %s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a1": "核能发电：%s %s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b0": "§5末影损伤：%s / 100§r",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b1": "§c灼燃损伤：%s / 100§r",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b2": "§b冻结损伤：%s / 100§r",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b3": "§9雷霆损伤：%s / 100§r",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.b4": "§0凋亡损伤：%s / 100§r",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.c1": "元素损伤：%s %s %s %s %s %s %s %s %s %s",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.d": "无",
     "mrqx_extra_pack.tooltips.activated_giant_tumor.1": "巨大的恶性组织块",
     "mrqx_extra_pack.tooltips.activated_giant_tumor.2": "激活后，使胸腔中每个§e无形肿瘤§r和§e恶性肿瘤§r提供的数值增加一倍",
     "mrqx_extra_pack.tooltips.activated_giant_tumor.3": "并使你的§e健康§r胸腔属性不大于1",
