--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -367,7 +367,7 @@
     "mrqx_extra_pack.tooltips.fox_soul.2": "激活后，攻击回复伤害值5%的饱和度",
     "mrqx_extra_pack.tooltips.fox_soul.3": "§c集齐四魂时，回复量变为5倍§r",
     "mrqx_extra_pack.tooltips.framework_of_world.1": "“……于世界边境之地，吸纳来自虚空的力量……”",
-    "mrqx_extra_pack.tooltips.framework_of_world.2": "激活后，■入■■■虚空，直到■■■■",
+    "mrqx_extra_pack.tooltips.framework_of_world.2": "激■后，■入边■的虚空，直到■■■零",
     "mrqx_extra_pack.tooltips.furious_defense.1": "击碎一切",
     "mrqx_extra_pack.tooltips.furious_defense.2": "攻击时，如果重拳计数器大于10，则消耗所有重拳计数器和§6资源值§r，每消耗1点使伤害+(§f蒸汽计数§r*0.1)%，且此次攻击变为三连击，冷却时间1s",
     "mrqx_extra_pack.tooltips.gate_pearl_craft.1": "如果你在合成表中看到它，使用任意传送门珍珠作为合成材料即可",
@@ -494,6 +494,7 @@
     "mrqx_extra_pack.tooltips.marenol.3": "并有10%的概率将敌人的负面效果转移至自身（相同效果等级相加，持续时间相加）",
     "mrqx_extra_pack.tooltips.marenol.4": "根据自身所拥有的负面效果计算§c噩梦指数§r",
     "mrqx_extra_pack.tooltips.marenol.5": "§c噩梦指数§r=§e所有负面效果等级之和 × 你的扭曲值 × 0.1§r",
+    "mrqx_extra_pack.tooltips.mechanical_frenzy.1": "§c请在携带一枚下界之星以激活最终BOSS！！！§r",
     "mrqx_extra_pack.tooltips.meteor_shower_director.1": "星雨来了",
     "mrqx_extra_pack.tooltips.meteor_shower_director.2": "‌按下主动技能按键，消耗所有法力值施放§6超限：星海落瀑§r，根据消耗的法力值、§6天体§r器官个数和§7算力§r提供额外超限等级",
     "mrqx_extra_pack.tooltips.mini_end_crystal.1": "神秘的力量在你的胸中凝聚",
@@ -629,6 +630,7 @@
     "mrqx_extra_pack.tooltips.sentient_greatscythe.1": "“它是活着的……”",
     "mrqx_extra_pack.tooltips.sentient_greatscythe.2": "§e血肉收割：手持右键释放§c超限：猩红斩击§e，根据攻击力提升超限等级，冷却1s§r",
     "mrqx_extra_pack.tooltips.sentient_greatscythe.3": "§e增生适应：手持时受伤，将获得对同种伤害的抗性（虚空伤害除外）§r",
+    "mrqx_extra_pack.tooltips.shadow_of_caerula_arbor.1": "§c请在水中进行挑战，否则最终BOSS无法击败！！！§r",
     "mrqx_extra_pack.tooltips.shield_generator.1": "“啥都能挡，大概”",
     "mrqx_extra_pack.tooltips.shield_generator.2": "§e能量护盾：消耗资源值回复耐久，有耐久时消耗耐久抵消受到的伤害（虚空伤害除外）§r",
     "mrqx_extra_pack.tooltips.shield_generator.3": "§e过载输出：护盾耐久降至0时不会损毁，且会使本次伤害直接归零并使身上所有正面效果等级+1，护盾将进入10s的冷却§r",
