--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -494,7 +494,7 @@
     "mrqx_extra_pack.tooltips.marenol.3": "并有10%的概率将敌人的负面效果转移至自身（相同效果等级相加，持续时间相加）",
     "mrqx_extra_pack.tooltips.marenol.4": "根据自身所拥有的负面效果计算§c噩梦指数§r",
     "mrqx_extra_pack.tooltips.marenol.5": "§c噩梦指数§r=§e所有负面效果等级之和 × 你的扭曲值 × 0.1§r",
-    "mrqx_extra_pack.tooltips.mechanical_frenzy.1": "§c请在携带一枚下界之星以激活最终BOSS！！！§r",
+    "mrqx_extra_pack.tooltips.mechanical_frenzy.1": "§c请携带一枚下界之星以激活最终BOSS！！！§r",
     "mrqx_extra_pack.tooltips.meteor_shower_director.1": "星雨来了",
     "mrqx_extra_pack.tooltips.meteor_shower_director.2": "‌按下主动技能按键，消耗所有法力值施放§6超限：星海落瀑§r，根据消耗的法力值、§6天体§r器官个数和§7算力§r提供额外超限等级",
     "mrqx_extra_pack.tooltips.mini_end_crystal.1": "神秘的力量在你的胸中凝聚",
