--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -262,6 +262,31 @@
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.d0": "蒸汽动力：%s %s %s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.d1": "蒸汽计数：%s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.e": "蒸汽增压：%s %s",
+    "mrqx_extra_pack.tip.tip_0": "你已经安装了mrqx_extra_pack（墨染琴弦的拓展包），反馈bug时请注意问题的来源",
+    "mrqx_extra_pack.tip.tip_1": "请勿携带偶数的反物质心脏",
+    "mrqx_extra_pack.tip.tip_10": "反物质脾建议搭配灵魂鹫羽毛食用",
+    "mrqx_extra_pack.tip.tip_11": "缺掉落物材料？冒险者证章，你值得拥有",
+    "mrqx_extra_pack.tip.tip_12": "或许利维坦的出没地点比较适合开启深蓝之树",
+    "mrqx_extra_pack.tip.tip_13": "机械狂潮怕水",
+    "mrqx_extra_pack.tip.tip_14": "舍吾皮肉，肉斩骨断",
+    "mrqx_extra_pack.tip.tip_15": "血肉漏斗或许更配得上“掠夺者”这个称号",
+    "mrqx_extra_pack.tip.tip_16": "身上的buff过度影响到你家的生物的时候，或许牛奶是另一种解决办法",
+    "mrqx_extra_pack.tip.tip_17": "遇到无法放上召唤祭坛的东西怎么办？该请溜槽大圣了",
+    "mrqx_extra_pack.tip.tip_18": "流失生命值不同于受到伤害，无法被任何形式阻挡",
+    "mrqx_extra_pack.tip.tip_19": "深海超人创业未半而中道减一",
+    "mrqx_extra_pack.tip.tip_2": "携带实体磁铁时不要靠近村民交易所",
+    "mrqx_extra_pack.tip.tip_20": "看来有怪欠滋了（掏出腐化聚晶）",
+    "mrqx_extra_pack.tip.tip_21": "无论是失乐园还是复乐园，它们两个都能在战斗中各自发挥自己的能力",
+    "mrqx_extra_pack.tip.tip_22": "幽匿套是性能杀手",
+    "mrqx_extra_pack.tip.tip_23": "脆肚好吃",
+    "mrqx_extra_pack.tip.tip_24": "墨染琴弦是个鸽子",
+    "mrqx_extra_pack.tip.tip_3": "复激活药丸并不能激活需要激活药的复激活药丸",
+    "mrqx_extra_pack.tip.tip_4": "在念完自然对数e的值前不要回家",
+    "mrqx_extra_pack.tip.tip_5": "体内有某些深海器官时不要在村民交易所附近动手",
+    "mrqx_extra_pack.tip.tip_6": "欸，你醒啦，等下就可以上餐桌啦",
+    "mrqx_extra_pack.tip.tip_7": "机械动力很有趣的",
+    "mrqx_extra_pack.tip.tip_8": "神之惩戒是“惩戒”，不是“挑战”",
+    "mrqx_extra_pack.tip.tip_9": "阿斯莫德的力量会让附近的动物快速繁殖",
     "mrqx_extra_pack.tooltips.activated_giant_tumor.1": "巨大的恶性组织块",
     "mrqx_extra_pack.tooltips.activated_giant_tumor.2": "激活后，使胸腔中每个§e无形肿瘤§r和§e恶性肿瘤§r提供的数值增加一倍",
     "mrqx_extra_pack.tooltips.activated_giant_tumor.3": "并使你的§e健康§r胸腔属性不大于1",
@@ -690,9 +715,9 @@
     "mrqx_extra_pack.tooltips.steam_power_cpu.3": "激活后，每点§7算力§r提供+1§f蒸汽§r器官个数",
     "mrqx_extra_pack.tooltips.steam_power_cpu.4": "每个§f蒸汽§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.steam_power_engine.1": "时光飞逝，它仍在转动",
-    "mrqx_extra_pack.tooltips.steam_power_engine.2": "胸腔中有§e蒸汽引擎§r时，手持水瓶右键，将§c熔火§r/§c心火§r转变为相同等级、时长的§f蒸汽动力§r（已有则等级+1、增加时长，等级上限为§e蒸汽引擎§r个数+2，时长上限为等级×2分钟）",
+    "mrqx_extra_pack.tooltips.steam_power_engine.2": "胸腔中有§e蒸汽引擎§r时，手持水瓶右键，将§c熔火§r/§c心火§r转变为相同等级、时长的§f蒸汽动力§r（已有则等级+1、增加时长，等级上限为§f蒸汽§r器官个数+2，时长上限为等级×2分钟）",
     "mrqx_extra_pack.tooltips.steam_power_turbine.1": "改造之后，它适应了新时代",
-    "mrqx_extra_pack.tooltips.steam_power_turbine.2": "胸腔中有§e蒸汽引擎§r时，手持水桶右键，将§c核能动力§r转变为双倍等级、相同时长的§f蒸汽动力§r（已有则等级+2、大幅增加时长，等级上限为§e蒸汽引擎§r个数×2+3，时长上限为等级×2分钟）",
+    "mrqx_extra_pack.tooltips.steam_power_turbine.2": "胸腔中有§e蒸汽引擎§r时，手持水桶右键，将§c核能动力§r转变为双倍等级、相同时长的§f蒸汽动力§r（已有则等级+2、大幅增加时长，等级上限为§f蒸汽§r器官个数×2+3，时长上限为等级×2分钟）",
     "mrqx_extra_pack.tooltips.steam_rapier.1": "高压蒸汽形成的火焰长剑",
     "mrqx_extra_pack.tooltips.steam_rapier.2": "每点§f蒸汽计数§r提供5%增伤，并额外造成(伤害×§f蒸汽计数§r×0.1)的§c灼燃损伤§r",
     "mrqx_extra_pack.tooltips.steam_supercharge_engine.1": "压力加倍",
