--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -535,12 +535,13 @@
     "mrqx_extra_pack.tooltips.moon_soul.3": "§c集齐四魂时，上限变为1000%§r",
     "mrqx_extra_pack.tooltips.mrqx0195.1": "Github：https://github.com/mrqx0195",
     "mrqx_extra_pack.tooltips.mrqx0195.2": "Bilibili：https://space.bilibili.com/177796945",
-    "mrqx_extra_pack.tooltips.mrqx0195.3": "爱发电：https://afdian.com/a/mrqx0195",
-    "mrqx_extra_pack.tooltips.mrqx0195.4": "激活后，获得以下效果：",
-    "mrqx_extra_pack.tooltips.mrqx0195.5": "造成的伤害变为0",
-    "mrqx_extra_pack.tooltips.mrqx0195.6": "受到的伤害变为0（虚空伤害除外）",
-    "mrqx_extra_pack.tooltips.mrqx0195.7": "清除所有实体/箱子战利品",
-    "mrqx_extra_pack.tooltips.mrqx0195.8": "不会被任何实体选为目标",
+    "mrqx_extra_pack.tooltips.mrqx0195.3": "引力圈：https://app.unifans.io/c/mrqx0195",
+    "mrqx_extra_pack.tooltips.mrqx0195.4": "Patreon：https://www.patreon.com/c/mrqx0195",
+    "mrqx_extra_pack.tooltips.mrqx0195.5": "激活后，获得以下效果：",
+    "mrqx_extra_pack.tooltips.mrqx0195.6": "造成的伤害变为0",
+    "mrqx_extra_pack.tooltips.mrqx0195.7": "受到的伤害变为0（虚空伤害除外）",
+    "mrqx_extra_pack.tooltips.mrqx0195.8": "清除所有实体/箱子战利品",
+    "mrqx_extra_pack.tooltips.mrqx0195.9": "不会被任何实体选为目标",
     "mrqx_extra_pack.tooltips.mrqx_antimatter": "反物质",
     "mrqx_extra_pack.tooltips.mrqx_celestial_body": "天体",
     "mrqx_extra_pack.tooltips.mrqx_change_target": "实体目标",
@@ -591,6 +592,8 @@
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.2": "激活后，每有一个§1深海§r器官，攻击力+10%",
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.3": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
     "mrqx_extra_pack.tooltips.paper_written.1": "在雨中、水中、燃烧状态、火中、岩浆中时，器官数值的绝对值逐渐减少",
+    "mrqx_extra_pack.tooltips.pineapple_shrimp_fried_rice.1": "§8一道未完成的菜",
+    "mrqx_extra_pack.tooltips.pineapple_shrimp_fried_rice.2": "§8致一位已过世的友人",
     "mrqx_extra_pack.tooltips.portable_medical_checkup_device.1": "长按右键以显示自己/准星对准的实体的胸腔属性",
     "mrqx_extra_pack.tooltips.prison_soul.1": "血红地狱的诅咒",
     "mrqx_extra_pack.tooltips.prison_soul.2": "激活后，击杀生物使你的§ckillcount§r+1",
