--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -126,6 +126,7 @@
     "item.mrqx_extra_pack.nuclear_fuel": "核反应燃料",
     "item.mrqx_extra_pack.origin_sin": "‌原罪·罪源",
     "item.mrqx_extra_pack.pancreas_group_hunting": "“集群狩猎”胰",
+    "item.mrqx_extra_pack.pineapple_shrimp_fried_rice": "菠萝虾仁炒饭",
     "item.mrqx_extra_pack.portable_medical_checkup_device": "便携式体检仪",
     "item.mrqx_extra_pack.prison_soul": "死狱之魂",
     "item.mrqx_extra_pack.proud_soul": "荣耀之魂",
