--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -334,6 +334,9 @@
     "item.kubejs.dreadsteel_ingot": "悚怖钢",
     "item.kubejs.glass_wand": "玻璃法杖",
     "item.kubejs.chicken_flavor_powder": "麦乐鸡粉",
+    "item.kubejs.flame_muscle": "烈焰肌肉",
+    "item.kubejs.flame_heart": "烈焰心脏",
+    "item.kubejs.snow_monster_core": "雪怪核心",
     "block.irons_spellbooks.blood_cauldron": "盛血的炼药锅",
     "item.irons_spellbooks.eldritch_manuscript": "巫术学派手稿",
     "item.irons_spellbooks.eldritch_manuscript_desc": "右键打开以学习巫术学派的法术",
@@ -1121,12 +1124,12 @@
     "kubejs.tooltips.furnace_core.1": "蕴含着革命之力，但未被完全解放",
     "kubejs.tooltips.furnace_core.2": "手持煤炭右键以获得%ds熔火燃烧",
     "kubejs.tooltips.furnace_core.3": "熔火燃烧状态下，攻击会额外附加当前buff等级的固定伤害",
-    "kubejs.tooltips.furnace_core.4": "与心火状态不兼容",
+    "kubejs.tooltips.furnace_core.4": "体温会高速上升，与心火状态不兼容",
     "kubejs.tooltips.burning_heart.1": "被完全解放的革命之力",
     "kubejs.tooltips.burning_heart.2": "心火を燃やして、ぶっ潰す！",
     "kubejs.tooltips.burning_heart.3": "手持煤炭右键以获得%ds心火燃烧效果",
     "kubejs.tooltips.burning_heart.4": "在心火燃烧buff仅剩的最后%ds，会根据状态等级提供心火暴击效果",
-    "kubejs.tooltips.burning_heart.5": "与熔火状态不兼容",
+    "kubejs.tooltips.burning_heart.5": "体温会高速上升，与熔火状态不兼容",
     "kubejs.tooltips.revolution_cable.1": "每存在一种类为革命的器官，会为你添加额外%d点生命值",
     "kubejs.tooltips.revolution_gear.1": "每%d个该器官提供额外的%d级熔火等级",
     "kubejs.tooltips.revolution_gear.5": "每",
@@ -1310,6 +1313,12 @@
     "kubejs.tooltips.lightning_dragon_bead.2": "使用主动技能按键消耗500法力值，释放§6超限:电刑",
     "kubejs.tooltips.lightning_dragon_bead.3": "使用者的最大生命值越多，电刑技能的超限等级越高",
     "kubejs.tooltips.lightning_dragon_bead.4": "释放时法力值不足500将消耗生命值补全法力需求，不致死",
+    "kubejs.tooltips.flame_muscle.1": "烈焰给予我力量",
+    "kubejs.tooltips.flame_muscle.2": "每个肌肉额外提供等于当前体温值的力量",
+    "kubejs.tooltips.flame_heart.1": "他在火焰中跳动",
+    "kubejs.tooltips.flame_heart.2": "额外造成相当于当前体温值的伤害",
+    "kubejs.tooltips.snow_monster_core.1": "很可爱的小东西，不是吗？",
+    "kubejs.tooltips.snow_monster_core.2": "你丢出的雪球将被转化为冰霜炸弹",
     "kubejs.tooltips.ore_lung.1": "吸入了过多灰尘，已经残破不堪",
     "kubejs.tooltips.ore_lung.2": "每次挖掘石头后，便会积累1资源点数",
     "kubejs.tooltips.ore_lung.3": "每次触发时，有3%概率消耗64点资源点数并给予矿物",
