--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -337,6 +337,7 @@
     "item.kubejs.flame_muscle": "烈焰肌肉",
     "item.kubejs.flame_heart": "烈焰心脏",
     "item.kubejs.snow_monster_core": "雪怪核心",
+    "item.kubejs.etched_paper":"蚀咒纸",
     "block.irons_spellbooks.blood_cauldron": "盛血的炼药锅",
     "item.irons_spellbooks.eldritch_manuscript": "巫术学派手稿",
     "item.irons_spellbooks.eldritch_manuscript_desc": "右键打开以学习巫术学派的法术",
@@ -1592,6 +1593,15 @@
     "kubejs.tooltips.dragon_blood_heart.2": "在龙化状态下，龙类器官会给予你减伤，在减伤溢出时会将伤害转换成额外生命",
     "kubejs.tooltips.dragon_blood_heart.3": "神经效率影响龙化状态的持续时间，龙类器官种类影响龙化效果",
     "kubejs.tooltips.dragon_blood_heart.4": "额外生命值最多为生命值上限*3",
+    "kubejs.tooltips.etched_paper.1":"优质纸张",
+    "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每个物品的附魔提供增益",
+    "kubejs.tooltips.etched_paper.3":"胸腔内每个非诅咒附魔等级提供",
+    "kubejs.tooltips.etched_paper.4":"法术强度",
+    "kubejs.tooltips.etched_paper.5":"胸腔内每个诅咒附魔等级降低",
+    "kubejs.tooltips.etched_paper.6":"法术强度，但提供",
+    "kubejs.tooltips.etched_paper.7":"法力恢复",
+    "kubejs.tooltips.etched_paper.8":"有5种附魔的每格额外提供",
+    "kubejs.tooltips.etched_paper.9":"冷却缩减",
     "tooltip.translation.spacecatasb.settitle.amethyst": "紫水晶",
     "tooltip.translation.spacecatasb.settitle.archevoker": "高位唤魔者",
     "tooltip.translation.spacecatasb.settitle.battlemage": "战斗法师",
