改为翻译键

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1056,6 +1056,11 @@
     "kubejs.tooltips.organ_score.7": "查看激活效果",
     "kubejs.tooltips.organ_score.8": "[ Alt ] ",
     "kubejs.tooltips.organ_score.9": "查看特殊效果",
+    "kubejs.tooltips.organ_burn_cold_attri.1": "每格该器官使你能忍受的最高温度 ",
+    "kubejs.tooltips.organ_burn_cold_attri.2": "每格该器官使你能忍受的最低温度 ",
+    "kubejs.tooltips.heat": " 提高 ",
+    "kubejs.tooltips.cold": " 降低 ",
+    "kubejs.tooltips.degree": " ℃",
     "kubejs.tooltips.organ_charm.1": "储存物: ",
     "kubejs.tooltips.organ_charm.2": "进化目标: ",
     "kubejs.tooltips.organ_charm.3": "向容器内填充",
