--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1602,13 +1602,13 @@
     "kubejs.tooltips.dragon_blood_heart.4": "额外生命值最多为生命值上限*3",
     "kubejs.tooltips.etched_paper.1":"并非厕纸",
     "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每格物品的附魔提供增益",
-    "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔提高",
-    "kubejs.tooltips.etched_paper.4":"法术强度",
-    "kubejs.tooltips.etched_paper.5":"每级诅咒附魔降低",
-    "kubejs.tooltips.etched_paper.6":"法术强度，但提高",
-    "kubejs.tooltips.etched_paper.7":"法力恢复",
-    "kubejs.tooltips.etched_paper.8":"至少有5种附魔的每格额外提高",
-    "kubejs.tooltips.etched_paper.9":"冷却缩减",
+    "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§7%d法术强度",
+    "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§7%d法术强度，但§a提高§7%d法力回复",
+    "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供§7%d冷却缩减",
+    "kubejs.tooltips.cloud_brocade.1":"羽化而登氙",
+    "kubejs.tooltips.cloud_brocade.2":"按下主动技能按键后获得短暂的缓降效果，",
+    "kubejs.tooltips.cloud_brocade.3":"并使你胸腔的漂浮属性在§6当前值§7与§6零§7之间切换",
+    "kubejs.tooltips.cloud_brocade.4":"切换为§6当前值§7时获得跳跃提升",
     "tooltip.translation.spacecatasb.settitle.amethyst": "紫水晶",
     "tooltip.translation.spacecatasb.settitle.archevoker": "高位唤魔者",
     "tooltip.translation.spacecatasb.settitle.battlemage": "战斗法师",
