--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1576,11 +1576,11 @@
     "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每格物品的附魔提供增益",
     "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§7%d法术强度",
     "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§7%d法术强度，但§a提高§7%d法力回复",
-    "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供§7%d冷却缩减",
-    "kubejs.tooltips.cloud_brocade.1":"羽化而登氙",
+    "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供%d冷却缩减和%d飘浮",
+    "kubejs.tooltips.cloud_brocade.1":"羽化而蹬氙",
     "kubejs.tooltips.cloud_brocade.2":"按下主动技能按键后获得短暂的缓降效果，",
-    "kubejs.tooltips.cloud_brocade.3":"并使你胸腔的漂浮属性在§6当前值§7与§6零§7之间切换",
-    "kubejs.tooltips.cloud_brocade.4":"切换为§6当前值§7时获得跳跃提升",
+    "kubejs.tooltips.cloud_brocade.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
+    "kubejs.tooltips.cloud_brocade.4":"切换为§6正常值§7时获得跳跃提升",
     "tooltip.translation.spacecatasb.settitle.amethyst": "紫水晶",
     "tooltip.translation.spacecatasb.settitle.archevoker": "高位唤魔者",
     "tooltip.translation.spacecatasb.settitle.battlemage": "战斗法师",
