修改失乐园效果

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1344,14 +1344,8 @@
     "kubejs.tooltips.doppelganger.6": "器官种类的数量",
     "kubejs.tooltips.lost_paradise.1": "于是，人类被赶出了伊甸园",
     "kubejs.tooltips.lost_paradise.2": "将会移除所有实体掉落物和宝箱掉落物",
-    "kubejs.tooltips.lost_paradise.3": "每次攻击会随机从以下效果中进行选择",
-    "kubejs.tooltips.lost_paradise.4": "将本次伤害类型转换为",
-    "kubejs.tooltips.lost_paradise.5": "无源摔落伤害",
-    "kubejs.tooltips.lost_paradise.6": "攻击伤害固定增加",
-    "kubejs.tooltips.lost_paradise.7": "敌人最大生命3%",
-    "kubejs.tooltips.lost_paradise.8": "攻击伤害翻倍",
-    "kubejs.tooltips.lost_paradise.9": "自身获得",
-    "kubejs.tooltips.lost_paradise.10": "生命恢复效果",
+    "kubejs.tooltips.lost_paradise.3": "每次攻击会有概率使受伤敌人的器官摘除",
+    "kubejs.tooltips.lost_paradise.4": "器官清空时，将会尝试直接§c抹杀§f该实体",
     "kubejs.tooltips.paradise_regained.1": "于是，神带着神启降临了",
     "kubejs.tooltips.paradise_regained.2": "实体掉落物数量将会翻倍",
     "kubejs.tooltips.pandora_inactive.1": "仅仅是从缝隙中感受到的力量就令人战栗",
