--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -338,6 +338,19 @@
     "item.kubejs.flame_heart": "烈焰心脏",
     "item.kubejs.snow_monster_core": "雪怪核心",
     "item.kubejs.etched_paper":"蚀咒纸",
+    "item.kubejs.chameleon_stomach": "变色龙胃囊",
+    "item.kubejs.flame_stomach": "烈焰之胃",
+    "item.kubejs.flame_spine": "烈焰脊骨",
+    "item.kubejs.ice_heart": "冰霜之心",
+    "item.kubejs.ice_rib": "冰霜肋骨",
+    "item.kubejs.ice_lung": "冰霜肺叶",
+    "item.kubejs.ice_intestine": "冰霜之肠",
+    "item.kubejs.ice_piece": "冰霜碎片",
+    "item.kubejs.knightphantom_ghost": "幽灵骑士的残魂",
+    "item.kubejs.twilight_broken_lich_crown": "破碎的巫妖王冠",
+    "item.kubejs.naga_scale": "娜迦的鳞片",
+    "item.kubejs.minotaur_muscle": "牛头人肌肉",
+    "item.kubejs.questing_ram": "谜题羊脊椎",
     "block.irons_spellbooks.blood_cauldron": "盛血的炼药锅",
     "item.irons_spellbooks.eldritch_manuscript": "巫术学派手稿",
     "item.irons_spellbooks.eldritch_manuscript_desc": "右键打开以学习巫术学派的法术",
@@ -455,6 +468,10 @@
     "effect.kubejs.dragon_power": "龙化",
     "effect.kubejs.colorful": "色彩",
     "effect.kubejs.declaration_of_death": "死亡宣告",
+    "effect.kubejs.heat_up": "升温",
+    "effect.kubejs.cold_down": "降温",
+    "effect.kubejs.overload": "过载",
+    "effect.kubejs.ice": "冷静",
     "travelerstitles.kubejs.lost_memory": "回忆之地",
     "kubejs.msg.tamagotchi.1": "Tamagotchi饿了！Tamagotchi想吃饭！",
     "kubejs.msg.tamagotchi.2": "Tamagotchi吃饱了！Tamagotchi很开心！",
@@ -882,6 +899,8 @@
     "kubejs.chestcavity.impact_resistant": "冲击抗性",
     "kubejs.chestcavity.rotgut": "嗜腐",
     "kubejs.chestcavity.ease_of_access": "易于开胸",
+    "kubejs.chestcavity.burning_point": "燃点",
+    "kubejs.chestcavity.freezing_point": "冰点",
     "kubejs.chestcavity.hover.filtration": "如果你没有足够的血液过滤效率，你就会中毒",
     "kubejs.chestcavity.hover.breath_recovery": "影响你呼吸气泡的恢复速度",
     "kubejs.chestcavity.hover.nutrition": "影响食物的饱和度",
@@ -933,6 +952,8 @@
     "kubejs.chestcavity.hover.impact_resistant": "提供你额外的冲击抗性",
     "kubejs.chestcavity.hover.rotgut": "能够使你可以食用腐肉",
     "kubejs.chestcavity.hover.ease_of_access": "能使该生物满血被开胸，且不会因此损失血量",
+    "kubejs.chestcavity.hover.burning_point": "每点使你能忍受的最高温度提高25℃",
+    "kubejs.chestcavity.hover.freezing_point": "每点使你能忍受的最低温度提高25℃",
     "kubejs.tooltips.appendix": "阑尾",
     "kubejs.tooltips.heart": "心脏",
     "kubejs.tooltips.intestine": "肠",
@@ -1105,12 +1126,12 @@
     "kubejs.tooltips.furnace_core.1": "蕴含着革命之力，但未被完全解放",
     "kubejs.tooltips.furnace_core.2": "手持煤炭右键以获得%ds熔火燃烧",
     "kubejs.tooltips.furnace_core.3": "熔火燃烧状态下，攻击会额外附加当前buff等级的固定伤害",
-    "kubejs.tooltips.furnace_core.4": "体温会高速上升，与心火状态不兼容",
+    "kubejs.tooltips.furnace_core.4": "每层熔火燃烧状态使你的世界温度上升10℃，与心火状态不兼容",
     "kubejs.tooltips.burning_heart.1": "被完全解放的革命之力",
     "kubejs.tooltips.burning_heart.2": "心火を燃やして、ぶっ潰す！",
     "kubejs.tooltips.burning_heart.3": "手持煤炭右键以获得%ds心火燃烧效果",
     "kubejs.tooltips.burning_heart.4": "在心火燃烧buff仅剩的最后%ds，会根据状态等级提供心火暴击效果",
-    "kubejs.tooltips.burning_heart.5": "体温会高速上升，与熔火状态不兼容",
+    "kubejs.tooltips.burning_heart.5": "每层熔火燃烧状态使你的世界温度上升10℃，与熔火状态不兼容",
     "kubejs.tooltips.revolution_cable.1": "每存在一种类为革命的器官，会为你添加额外%d点生命值",
     "kubejs.tooltips.revolution_gear.1": "每%d个该器官提供额外的%d级熔火等级",
     "kubejs.tooltips.revolution_gear.5": "每",
@@ -1295,9 +1316,10 @@
     "kubejs.tooltips.lightning_dragon_bead.3": "使用者的最大生命值越多，电刑技能的超限等级越高",
     "kubejs.tooltips.lightning_dragon_bead.4": "释放时法力值不足500将消耗生命值补全法力需求，不致死",
     "kubejs.tooltips.flame_muscle.1": "烈焰给予我力量",
-    "kubejs.tooltips.flame_muscle.2": "每个肌肉额外提供等于当前体温值的力量",
+    "kubejs.tooltips.flame_muscle.2": "若体温为正，近战攻击时，降低一半的体温，附加等量伤害",
     "kubejs.tooltips.flame_heart.1": "他在火焰中跳动",
-    "kubejs.tooltips.flame_heart.2": "额外造成相当于当前体温值的伤害",
+    "kubejs.tooltips.flame_heart.2": "体温大于50时，根据体内烈焰器官数目，使玩家进入过载状态",
+    "kubejs.tooltips.flame_heart.3": "过载状态下，根据体温提高受到和造成的伤害倍率，并提供大量基础数值",
     "kubejs.tooltips.snow_monster_core.1": "很可爱的小东西，不是吗？",
     "kubejs.tooltips.snow_monster_core.2": "你丢出的雪球将被转化为冰霜炸弹",
     "kubejs.tooltips.ore_lung.1": "吸入了过多灰尘，已经残破不堪",
@@ -1539,7 +1561,9 @@
     "kubejs.tooltips.worm_neuron.1": "你的脑海混沌一团，一股恶意涌了上来",
     "kubejs.tooltips.worm_neuron.2": "胸腔会在空白位置成长出肿瘤",
     "kubejs.tooltips.worm_neuron.3": "胸腔空闲位置越多、新陈代谢效率越高，肿瘤成长的空间越大",
-    "kubejs.tooltips.worm_neuron.4": "巫妖无法培育肿瘤，且培育成功后，你会变得饥饿",
+    "kubejs.tooltips.worm_neuron.4": "体温越高，肿瘤生长越快，数值波动越剧烈",
+    "kubejs.tooltips.worm_neuron.5": "体温越低，肿瘤生长越慢，质量越好",
+    "kubejs.tooltips.worm_neuron.6": "巫妖无法培育肿瘤，且培育成功后，你会变得饥饿",
     "kubejs.tooltips.lung_template.1": "从无名肉块中取出的器官",
     "kubejs.tooltips.muscle_template.1": "从无名肉块中取出的器官",
     "kubejs.tooltips.heart_template.1": "从无名肉块中取出的器官",
@@ -1575,6 +1599,41 @@
     "kubejs.tooltips.cloud_brocade.2":"按下主动技能按键后获得短暂的缓降效果，",
     "kubejs.tooltips.cloud_brocade.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
     "kubejs.tooltips.cloud_brocade.4":"切换为§6正常值§7时获得跳跃提升",
+    "kubejs.tooltips.chameleon_stomach.1":"变色？变温！",
+    "kubejs.tooltips.chameleon_stomach.2":"手持岩浆块或冰块右键，提供一层升温或降温效果，持续60s",
+    "kubejs.tooltips.chameleon_stomach.3":"每层升温或降温效果使你的世界温度提高或降低5℃，两种效果会互相抵消。",
+    "kubejs.tooltips.flame_stomach.1":"它将煤炭转化为热量",
+    "kubejs.tooltips.flame_stomach.2":"手持煤炭右键，立刻提高10℃体温",
+    "kubejs.tooltips.flame_spine.1":"燃烧的脊梁",
+    "kubejs.tooltips.flame_spine.2":"若体温为正，用体温抵消伤害",
+    "kubejs.tooltips.ice_heart.1": "冰心一出，游戏结束",
+    "kubejs.tooltips.ice_heart.2": "体温低于-50时，根据体内寒冰器官数目，为玩家附加冷静效果",
+    "kubejs.tooltips.ice_heart.3": "冷静效果下，根据体温降低受到的伤害，小幅降低法强，但提供大幅冷却缩减和回蓝",
+    "kubejs.tooltips.ice_lung.1": "吐出的每一个字都结着霜",
+    "kubejs.tooltips.ice_lung.2": "提升冰系法术法强，体温越低，提升越多。",
+    "kubejs.tooltips.ice_rib.1": "坚冰，封锁着我的胸腔",
+    "kubejs.tooltips.ice_rib.2": "体温低于0时，根据体温提供额外血量，体温变化时刷新",
+    "kubejs.tooltips.ice_intestine.1": "比冷心肠还冷",
+    "kubejs.tooltips.ice_intestine.2": "按下主动按键，若体温为负，升高体温以填充法力槽",
+    "kubejs.tooltips.ice_piece.1": "一片破碎的冰",
+    "kubejs.tooltips.ice_piece.2": "每五秒，如果玩家体温处于-25℃至25℃范围，则降低一点体温",
+    "kubejs.tooltips.knightphantom_ghost.1": "它们依然没有安息",
+    "kubejs.tooltips.knightphantom_ghost.2": "按下主动能力按键，获得10s旁观者状态",
+    "kubejs.tooltips.twilight_broken_lich_crown.1": "也算是一种大胃王？",
+    "kubejs.tooltips.twilight_broken_lich_crown.2": "按下主动能力按键，吞噬半径10范围内的友方铁魔法召唤物，傀儡和忠诚的僵尸，最多计入30个",
+    "kubejs.tooltips.twilight_broken_lich_crown.3": "根据吞噬的数量提供额外血量",
+    "kubejs.tooltips.twilight_broken_lich_crown.4": "根据吞噬的种类提供法强",
+    "kubejs.tooltips.twilight_broken_lich_crown.5": "根据吞噬的血量回复法力",
+    "kubejs.tooltips.twilight_broken_lich_crown.6": "根据吞噬的攻击力提升攻击力",
+    "kubejs.tooltips.twilight_broken_lich_crown.7": "提升的效果持续60s",
+    "kubejs.tooltips.naga_scale.1": "娜迦身上脱落的鳞片",
+    "kubejs.tooltips.naga_scale.2": "受伤时，获得速度效果",
+    "kubejs.tooltips.minotaur_muscle.1": "不好，有牛！",
+    "kubejs.tooltips.minotaur_muscle.2": "近战攻击把怪物扔上天",
+    "kubejs.tooltips.minotaur_muscle.3": "对玩家无效",
+    "kubejs.tooltips.questing_ram.1": "谜题羊会告诉你，魔法的秘密",
+    "kubejs.tooltips.questing_ram.2": "根据体温，将近战攻击强化为超限法术：烈焰打击或冰锥，等级与伤害和体温有关",
+    "kubejs.tooltips.questing_ram.3": "对玩家无效",
     "tooltip.translation.spacecatasb.settitle.amethyst": "紫水晶",
     "tooltip.translation.spacecatasb.settitle.archevoker": "高位唤魔者",
     "tooltip.translation.spacecatasb.settitle.battlemage": "战斗法师",
