器官基本完成
所有器官的获取方式，材质，文本基本完成

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -350,7 +350,8 @@
     "item.kubejs.twilight_broken_lich_crown": "破碎的巫妖王冠",
     "item.kubejs.naga_scale": "娜迦的鳞片",
     "item.kubejs.minotaur_muscle": "牛头人肌肉",
-    "item.kubejs.questing_ram": "谜题羊脊椎",
+    "item.kubejs.questing_ram_answer": "羊的谜底",
+    "item.kubejs.cloud_brocade": "云尖锥",
     "block.irons_spellbooks.blood_cauldron": "盛血的炼药锅",
     "item.irons_spellbooks.eldritch_manuscript": "巫术学派手稿",
     "item.irons_spellbooks.eldritch_manuscript_desc": "右键打开以学习巫术学派的法术",
@@ -1630,10 +1631,10 @@
     "kubejs.tooltips.naga_scale.2": "受伤时，获得速度效果",
     "kubejs.tooltips.minotaur_muscle.1": "不好，有牛！",
     "kubejs.tooltips.minotaur_muscle.2": "近战攻击把怪物扔上天",
-    "kubejs.tooltips.minotaur_muscle.3": "对玩家无效",
-    "kubejs.tooltips.questing_ram.1": "谜题羊会告诉你，魔法的秘密",
-    "kubejs.tooltips.questing_ram.2": "根据体温，将近战攻击强化为超限法术：烈焰打击或冰锥，等级与伤害和体温有关",
-    "kubejs.tooltips.questing_ram.3": "对玩家无效",
+    "kubejs.tooltips.minotaur_muscle.3": "攻击玩家时不生效",
+    "kubejs.tooltips.questing_ram_answer.1": "谜题羊会告诉你，魔法的秘密",
+    "kubejs.tooltips.questing_ram_answer.2": "根据体温，将近战攻击强化为超限法术：烈焰打击或冰锥，等级与伤害和体温有关",
+    "kubejs.tooltips.questing_ram_answer.3": "攻击玩家时不生效",
     "tooltip.translation.spacecatasb.settitle.amethyst": "紫水晶",
     "tooltip.translation.spacecatasb.settitle.archevoker": "高位唤魔者",
     "tooltip.translation.spacecatasb.settitle.battlemage": "战斗法师",
