修改燃点冰点注册

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1368,7 +1368,7 @@
     "kubejs.tooltips.lost_paradise.1": "于是，人类被赶出了伊甸园",
     "kubejs.tooltips.lost_paradise.2": "将会移除所有实体掉落物和宝箱掉落物",
     "kubejs.tooltips.lost_paradise.3": "每次攻击会有概率使受伤敌人的器官摘除",
-    "kubejs.tooltips.lost_paradise.4": "器官清空时，将会尝试直接§c抹杀§f该实体",
+    "kubejs.tooltips.lost_paradise.4": "器官清空时，将会尝试直接§c抹杀该实体§7",
     "kubejs.tooltips.paradise_regained.1": "于是，神带着神启降临了",
     "kubejs.tooltips.paradise_regained.2": "实体掉落物数量将会翻倍",
     "kubejs.tooltips.pandora_inactive.1": "仅仅是从缝隙中感受到的力量就令人战栗",
