暮色森林与tetra联动

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -348,7 +348,7 @@
     "item.kubejs.ice_piece": "冰霜碎片",
     "item.kubejs.knightphantom_ghost": "幽灵骑士的残魂",
     "item.kubejs.twilight_broken_lich_crown": "破碎的巫妖王冠",
-    "item.kubejs.naga_scale": "娜迦的鳞片",
+    "item.kubejs.naga_scale": "娜迦鳞片",
     "item.kubejs.minotaur_muscle": "牛头人肌肉",
     "item.kubejs.questing_ram_answer": "羊的谜底",
     "item.kubejs.cloud_brocade": "云尖锥",
@@ -774,6 +774,20 @@
     "tetra.material.ginkgo_planks.prefix": "银杏木",
     "tetra.material.petrified_planks": "石化木",
     "tetra.material.petrified_planks.prefix": "石化木",
+    "tetra.material.naga_scale": "娜迦鳞片",
+    "tetra.material.naga_scale.prefix": "娜迦鳞片",
+    "tetra.material.steeleaf_ingot": "钢叶",
+    "tetra.material.steeleaf_ingot.prefix": "钢叶",
+    "tetra.material.raven_feather": "渡鸦羽毛",
+    "tetra.material.raven_feather.prefix": "渡鸦羽毛",
+    "tetra.material.liveroot": "活根",
+    "tetra.material.liveroot.prefix": "活根",
+    "tetra.material.ironwood_ingot": "铁木",
+    "tetra.material.ironwood_ingot.prefix": "铁木",
+    "tetra.material.fiery_ingot": "炽铁",
+    "tetra.material.fiery_ingot.prefix": "炽铁",
+    "tetra.material.red_thread": "红线",
+    "tetra.material.red_thread.prefix": "红线",
     "rewards.gateways.loot_table.nether_bridge": "下界战利品",
     "rewards.dimdungeons.loot_table.chest_1": "基础维度地牢基础战利品",
     "rewards.dimdungeons.loot_table.chest_2": "基础维度地牢高级战利品",
@@ -1368,7 +1382,7 @@
     "kubejs.tooltips.lost_paradise.1": "于是，人类被赶出了伊甸园",
     "kubejs.tooltips.lost_paradise.2": "将会移除所有实体掉落物和宝箱掉落物",
     "kubejs.tooltips.lost_paradise.3": "每次攻击会有概率使受伤敌人的器官摘除",
-    "kubejs.tooltips.lost_paradise.4": "器官清空时，将会尝试直接§c抹杀该实体§7",
+    "kubejs.tooltips.lost_paradise.4": "器官清空时，将会尝试直接§c抹杀该实体§f",
     "kubejs.tooltips.paradise_regained.1": "于是，神带着神启降临了",
     "kubejs.tooltips.paradise_regained.2": "实体掉落物数量将会翻倍",
     "kubejs.tooltips.pandora_inactive.1": "仅仅是从缝隙中感受到的力量就令人战栗",
