暮色材料联动tetra基本完成

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -788,6 +788,28 @@
     "tetra.material.fiery_ingot.prefix": "炽铁",
     "tetra.material.red_thread": "红线",
     "tetra.material.red_thread.prefix": "红线",
+    "tetra.material.borer_essence": "蛀虫精华",
+    "tetra.material.borer_essence.prefix": "蛀虫精华",
+    "tetra.material.carminite": "砷铅铁矿石",
+    "tetra.material.carminite.prefix": "砷铅铁",
+    "tetra.material.knightmetal_ingot": "骑士金属锭",
+    "tetra.material.knightmetal_ingot.prefix": "骑士金属",
+    "tetra.material.arctic_fur": "极地毛皮",
+    "tetra.material.arctic_fur.prefix": "极地毛皮",
+    "tetra.material.aurora_block": "极光方块",
+    "tetra.material.aurora_block.prefix": "极光方块",
+    "tetra.material.canopy_planks": "苍穹木",
+    "tetra.material.canopy_planks.prefix": "苍穹木",
+    "tetra.material.towerwood": "塔木",
+    "tetra.material.towerwood.prefix": "塔木",
+    "tetra.material.fluffy_cloud_fabric": "浮云",
+    "tetra.material.fluffy_cloud_fabric.prefix": "浮云",
+    "tetra.material.fluffy_cloud_fibre": "浮云",
+    "tetra.material.fluffy_cloud_fibre.prefix": "浮云",
+    "tetra.material.trollvidr": "巨魔藤蔓",
+    "tetra.material.trollvidr.prefix": "巨魔藤蔓",
+    "tetra.material.root_strand": "根须",
+    "tetra.material.root_strand.prefix": "根须",
     "rewards.gateways.loot_table.nether_bridge": "下界战利品",
     "rewards.dimdungeons.loot_table.chest_1": "基础维度地牢基础战利品",
     "rewards.dimdungeons.loot_table.chest_2": "基础维度地牢高级战利品",
