--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -14,6 +14,8 @@
     "item.mrqx_extra_pack.advanced_uncoded_cpu": "‌高级未编码处理器",
     "item.mrqx_extra_pack.adventurers_badge": "冒险者证章",
     "item.mrqx_extra_pack.ancient_lich_heart": "远古巫妖之心",
+    "item.mrqx_extra_pack.anomaly_artificial_mineral_cluster": "异化人造矿簇",
+    "item.mrqx_extra_pack.antimatter_reverse_cpu": "反物质“逆向”处理器",
     "item.mrqx_extra_pack.appendix_antimatter": "反物质阑尾",
     "item.mrqx_extra_pack.appendix_assimilation_mutation": "“同化，变异”阑尾",
     "item.mrqx_extra_pack.appendix_paper": "纸阑尾",
@@ -33,6 +35,7 @@
     "item.mrqx_extra_pack.dark_sun_seed": "暗日种子",
     "item.mrqx_extra_pack.divine_pen": "神之笔",
     "item.mrqx_extra_pack.energy_core": "能量核心",
+    "item.mrqx_extra_pack.enriched_ore_cluster_precipitation_membrane": "富集矿簇析出膜",
     "item.mrqx_extra_pack.eternal_wing_of_soul": "永恒灵魂之翼",
     "item.mrqx_extra_pack.fallen_paradise_container": "堕乐园容器",
     "item.mrqx_extra_pack.fission_reactor": "裂变反应堆",
@@ -148,6 +151,7 @@
     "item.mrqx_extra_pack.sculk_depositer": "幽匿沉积体",
     "item.mrqx_extra_pack.sculk_growler": "幽匿咆哮体",
     "item.mrqx_extra_pack.sculk_heart": "幽匿之心",
+    "item.mrqx_extra_pack.sculk_infection_cpu": "幽匿“感染”处理器",
     "item.mrqx_extra_pack.sculk_infester": "幽匿寄染体",
     "item.mrqx_extra_pack.sculk_rock_breaker": "幽匿裂岩体",
     "item.mrqx_extra_pack.seaborn_beacon_cpu": "‌深海“灯塔”处理器",
@@ -312,6 +316,7 @@
     "mrqx_extra_pack.tooltips.advanced_eyeglass.8": "模块：核能动力",
     "mrqx_extra_pack.tooltips.advanced_eyeglass.9": "模块：蒸汽动力/蒸汽增压",
     "mrqx_extra_pack.tooltips.advanced_eyeglass.a": "模块：元素损伤",
+    "mrqx_extra_pack.tooltips.advanced_eyeglass.b": "模块：伤害显示",
     "mrqx_extra_pack.tooltips.advanced_uncoded_cpu.1": "“附赠全套编码工具”",
     "mrqx_extra_pack.tooltips.adventurers_badge.1": "冒险者的证明",
     "mrqx_extra_pack.tooltips.adventurers_badge.2": "在这个新的世界前进吧",
@@ -324,10 +329,15 @@
     "mrqx_extra_pack.tooltips.adventurers_badge.9": "§c此效果唯一§r",
     "mrqx_extra_pack.tooltips.ancient_lich_heart.1": "以活着的巫婆为祭品，注入巫妖的遗物",
     "mrqx_extra_pack.tooltips.ancient_lich_heart.2": "直到其响起远古的鼓动……",
-    "mrqx_extra_pack.tooltips.ancient_lich_heart.3": "§e爱发电赞助者：蓝蔷薇§r",
+    "mrqx_extra_pack.tooltips.ancient_lich_heart.3": "§e杰出赞助者：蓝蔷薇§r",
     "mrqx_extra_pack.tooltips.ancient_lich_heart.4": "如果玩家为巫妖，所有亡灵生物将保持被动，非亡灵生物变为中立，免疫大多数负面效果",
     "mrqx_extra_pack.tooltips.ancient_lich_heart.5": "如果玩家不为巫妖，持续获得§5诅咒§rV、§5魔力空虚§rV、§5灵魂饥饿§rV",
     "mrqx_extra_pack.tooltips.ancient_lich_heart.6": "激活后，如果玩家为巫妖，吟唱缩减+200%",
+    "mrqx_extra_pack.tooltips.anomaly_artificial_mineral_cluster.1": "物质不停变化，也许粉碎后可以获得些什么",
+    "mrqx_extra_pack.tooltips.antimatter_reverse_cpu.1": "指令：逆向计算",
+    "mrqx_extra_pack.tooltips.antimatter_reverse_cpu.2": "> 0===1 :true",
+    "mrqx_extra_pack.tooltips.antimatter_reverse_cpu.3": "激活后，每点§7算力§r提供+1§2反物质§r器官个数",
+    "mrqx_extra_pack.tooltips.antimatter_reverse_cpu.4": "每个§2反物质§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.appendix_assimilation_mutation.1": "“他们会成为我们的血亲。”",
     "mrqx_extra_pack.tooltips.appendix_assimilation_mutation.2": "激活后，使胸腔中不带有§5禁忌§r、§f传说§r、§6遗物§r词条的器官被视为§1深海§r器官（不会触发全套加成）",
     "mrqx_extra_pack.tooltips.appendix_assimilation_mutation.3": "每个§1深海§r器官提供50法力值上限",
@@ -362,11 +372,11 @@
     "mrqx_extra_pack.tooltips.chocolate_coinage_machine.1": "钱？那是什么？能吃吗？",
     "mrqx_extra_pack.tooltips.chocolate_coinage_machine.2": "按下主动技能按键，将手持的钱币转换为对应的巧克力币",
     "mrqx_extra_pack.tooltips.command_spell_core.1": "从指令法术书中取出的核心",
-    "mrqx_extra_pack.tooltips.command_spell_core.2": "激活后，法术强度+50%",
+    "mrqx_extra_pack.tooltips.command_spell_core.2": "激活后，法术强度+100%",
     "mrqx_extra_pack.tooltips.compressed_biscuit.1": "这不是毛巾，是压缩饼干，你把它打开，放在肚里，饥饿值变大变高……",
     "mrqx_extra_pack.tooltips.compressed_biscuit.2": "食用食物时，根据胸腔中§6食物§r器官的数量，少量增幅获得的饥饿值、饱和度",
     "mrqx_extra_pack.tooltips.cpu.1": "“检测到无效指令，正在使用默认指令：通用计算”",
-    "mrqx_extra_pack.tooltips.cpu.2": "每有一个§e处理器§r器官，§7算力§r+2§c（此效果唯一）§r",
+    "mrqx_extra_pack.tooltips.cpu.2": "每有一个§e处理器§r器官，§7算力§r+1",
     "mrqx_extra_pack.tooltips.crispy_belly.1": "脆肚好吃",
     "mrqx_extra_pack.tooltips.crispy_belly.2": "……翠杜？",
     "mrqx_extra_pack.tooltips.dark_sun_seed.1": "暗无天日",
@@ -377,7 +387,19 @@
     "mrqx_extra_pack.tooltips.divine_pen.3": "墨水的稀有度越高，自身的胸腔属性越高，写入的属性越高",
     "mrqx_extra_pack.tooltips.divine_pen.4": "如果胸腔中存在§f纸§r器官，则无法进行书写",
     "mrqx_extra_pack.tooltips.energy_core.1": "借助世界框架中的奥秘之力，你找到了资源值存储的最终方案……",
-    "mrqx_extra_pack.tooltips.energy_core.2": "激活后，资源值上限增加21亿",
+    "mrqx_extra_pack.tooltips.energy_core.2": "激活后，§6资源值§r上限增加21亿",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.1": "看上去……像个肺？",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.10": "资源值越高，越容易产出高级的矿簇，如果未满足额外条件，则降级为前一级的矿簇",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.11": "资源值<=100或潜行状态下不会触发转化",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.12": "激活后，胸腔中每个§b矿石肺§r提供+100§6资源值§r上限，并使其特殊效果失效",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.2": "每次挖掘石头有50%概率不掉落，而是将其转化为等同于§6资源§r器官数量的资源值",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.3": "如果胸腔中存在§b机械“挖矿”处理器§r，则概率变为100%",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.4": "同时有5%概率将当前所有资源值转化为矿簇：",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.5": "资源值>100时能产出常见矿簇（消耗10资源值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.6": "资源值>200时能产出稀有矿簇（消耗20资源值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.7": "资源值>300时能产出人造矿簇（消耗30资源值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.8": "资源值>400时能产出魔化人造矿簇（消耗40资源值和10法力值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.9": "资源值>500时能产出异化人造矿簇（消耗50资源值、10法力值和10扭曲值）",
     "mrqx_extra_pack.tooltips.eternal_wing_of_soul.1": "近乎有形的翼展，使你能够在空中自由移动",
     "mrqx_extra_pack.tooltips.eternal_wing_of_soul.2": "激活后，获得创造飞行能力，飞行速度+3",
     "mrqx_extra_pack.tooltips.fallen_paradise_container.1": "（Luna's联动）承装着堕乐园，自动吸收背包中的无尽之力，可通过手持右键取出",
@@ -409,7 +431,7 @@
     "mrqx_extra_pack.tooltips.golden_libra.3": "因此而降低的数值等量加至你的攻击力",
     "mrqx_extra_pack.tooltips.heart_antimatter.1": "反转的世界",
     "mrqx_extra_pack.tooltips.heart_antimatter.2": "激活后，将你所有的胸腔属性变为其相反数",
-    "mrqx_extra_pack.tooltips.heart_antimatter.3": "如果某一属性在取反前为负数，则使其数值加上反物质器官的个数",
+    "mrqx_extra_pack.tooltips.heart_antimatter.3": "如果某一属性在取反前为负数，则使其数值加上§3反物质§r器官的个数",
     "mrqx_extra_pack.tooltips.heart_paper.1": "可书写：健康、光合、击退抗性、易于开胸",
     "mrqx_extra_pack.tooltips.heart_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.heart_tidal_elegy.1": "“纠缠着我的噩梦啊，唱个歌吧。”",
@@ -461,7 +483,7 @@
     "mrqx_extra_pack.tooltips.liver_tide_observation.2": "激活后，每有一个§1深海§r器官，法力回复+20%",
     "mrqx_extra_pack.tooltips.liver_tide_observation.3": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
     "mrqx_extra_pack.tooltips.long_telescopic_attack_arm.1": "长——————",
-    "mrqx_extra_pack.tooltips.long_telescopic_attack_arm.2": "激活后，每点§7算力§r使攻击速度乘以0.5（分次乘算），+0.5攻击距离",
+    "mrqx_extra_pack.tooltips.long_telescopic_attack_arm.2": "激活后，每点§7算力§r使攻击速度乘以0.5（分次乘算），同时+0.5攻击距离",
     "mrqx_extra_pack.tooltips.long_telescopic_piston_arm.1": "长——————",
     "mrqx_extra_pack.tooltips.long_telescopic_piston_arm.2": "激活后，每点§7算力§r使攻击速度乘以0.5（分次乘算），同时+0.5触及距离",
     "mrqx_extra_pack.tooltips.lung_paper.1": "可书写：呼吸效率、肺活量、耐力、水下呼吸、强力口水、龙息",
@@ -473,7 +495,7 @@
     "mrqx_extra_pack.tooltips.lung_the_tide_surges_the_tide_recedes.5": "冷却时间1秒",
     "mrqx_extra_pack.tooltips.machine_burn_flare_heart_cpu.1": "指令：“熔核之心”",
     "mrqx_extra_pack.tooltips.machine_burn_flare_heart_cpu.2": "战斗，直至核心融毁",
-    "mrqx_extra_pack.tooltips.machine_burn_flare_heart_cpu.3": "激活后，每点§7算力§r提供+1革命齿轮数量",
+    "mrqx_extra_pack.tooltips.machine_burn_flare_heart_cpu.3": "激活后，每点§7算力§r提供+1§7机械§r器官个数，+1革命齿轮数量",
     "mrqx_extra_pack.tooltips.machine_burn_flare_heart_cpu.4": "每个§7机械§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.machine_critical_cpu.1": "指令：“会心一击”",
     "mrqx_extra_pack.tooltips.machine_critical_cpu.2": "我的眼中，倒映出你的死",
@@ -607,7 +629,7 @@
     "mrqx_extra_pack.tooltips.re_active_pill_moderation.1": "代价小了点",
     "mrqx_extra_pack.tooltips.re_active_pill_moderation.2": "激活后，随机触发胸腔中5个非§e唯一激活§r器官的激活效果",
     "mrqx_extra_pack.tooltips.recorder.1": "我来到，我看见，我记录",
-    "mrqx_extra_pack.tooltips.recorder.2": "使你记录击杀过的生物，对其的伤害+(√击杀次数)%",
+    "mrqx_extra_pack.tooltips.recorder.2": "使你记录击杀过的生物，对该类生物的伤害+(√击杀次数)%",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.1": "“别急别急，人人有份~”",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.2": "§e魂灵残影：每隔一段时间，随机攻击附近一位怪物，造成少量魔法伤害、0.5s缓慢IV、永久§c魂灵残影§e（已有§c魂灵残影§e则等级+1）§r",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.3": "§e破灭魂灵：攻击带有§c魂灵残影§e的敌人时，有30%概率消耗§c魂灵残影§e，造成小范围爆炸及范围魔法伤害（伤害值与§c魂灵残影§e等级成正比）。如果装备了超过三个§c灵魂奥秘·死魂灵的余息§e则升级为§c爆裂黎明§e，造成大范围爆炸及范围普通+魔法伤害（伤害值与§c魂灵残影§e等级成正比）§r",
@@ -634,20 +656,24 @@
     "mrqx_extra_pack.tooltips.sculk_brandguider.1": "它引领着幽匿的延伸",
     "mrqx_extra_pack.tooltips.sculk_brandguider.2": "将你脚下及周围的、可被转变为幽匿块的方块转变为幽匿块，每秒触发一次",
     "mrqx_extra_pack.tooltips.sculk_collectors.1": "它吸收着幽匿的养分",
-    "mrqx_extra_pack.tooltips.sculk_collectors.2": "根据§2幽匿指数§r，每秒回复饥饿值、饱和度、氧气值、法力值",
+    "mrqx_extra_pack.tooltips.sculk_collectors.2": "根据§3幽匿指数§r，每秒回复饥饿值、饱和度、氧气值、法力值",
     "mrqx_extra_pack.tooltips.sculk_depositer.1": "它守护着幽匿的核心",
-    "mrqx_extra_pack.tooltips.sculk_depositer.2": "每有一点§2幽匿指数§r，受到的伤害-1%（上限-10%）",
+    "mrqx_extra_pack.tooltips.sculk_depositer.2": "每有一点§3幽匿指数§r，受到的伤害-1%（上限-10%）",
     "mrqx_extra_pack.tooltips.sculk_growler.1": "它撕裂着幽匿的敌人",
-    "mrqx_extra_pack.tooltips.sculk_growler.2": "使用主动技能按键消耗当前所有法力值，释放§2超限:音爆§r",
-    "mrqx_extra_pack.tooltips.sculk_growler.3": "§2幽匿指数§r越高，消耗的法力值越多，音爆的超限等级越高，冷却时间越少",
+    "mrqx_extra_pack.tooltips.sculk_growler.2": "使用主动技能按键消耗当前所有法力值，释放§3超限:音爆§r",
+    "mrqx_extra_pack.tooltips.sculk_growler.3": "§3幽匿指数§r越高，消耗的法力值越多，音爆的超限等级越高，冷却时间越少",
     "mrqx_extra_pack.tooltips.sculk_heart.1": "它为幽匿的存在而鼓动",
-    "mrqx_extra_pack.tooltips.sculk_heart.2": "站在幽匿块上时，根据幽匿器官的个数及周围幽匿块个数计算§2幽匿指数§r",
-    "mrqx_extra_pack.tooltips.sculk_heart.3": "§2幽匿指数§r = §2幽匿§r器官个数 × 与脚下幽匿块相连的幽匿块个数（上限100个）",
+    "mrqx_extra_pack.tooltips.sculk_heart.2": "站在幽匿块上时，根据幽匿器官的个数及周围幽匿块个数计算§3幽匿指数§r",
+    "mrqx_extra_pack.tooltips.sculk_heart.3": "§3幽匿指数§r = §3幽匿§r器官个数 × 与脚下幽匿块相连的幽匿块个数（上限100个）",
     "mrqx_extra_pack.tooltips.sculk_heart.4": "§c此效果唯一§r",
+    "mrqx_extra_pack.tooltips.sculk_infection_cpu.1": "指令：幽匿感染",
+    "mrqx_extra_pack.tooltips.sculk_infection_cpu.2": "我即是幽匿",
+    "mrqx_extra_pack.tooltips.sculk_infection_cpu.3": "激活后，每点§7算力§r提供+1§3幽匿§r器官个数",
+    "mrqx_extra_pack.tooltips.sculk_infection_cpu.4": "每个§3幽匿§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.sculk_infester.1": "它消化着幽匿的猎物",
-    "mrqx_extra_pack.tooltips.sculk_infester.2": "击杀生物时，在其位置触发幽匿催发体的效果，效果等级与§2幽匿指数§r和最后一击的伤害相关",
+    "mrqx_extra_pack.tooltips.sculk_infester.2": "击杀生物时，在其位置触发幽匿催发体的效果，效果等级与§3幽匿指数§r和最后一击的伤害相关",
     "mrqx_extra_pack.tooltips.sculk_rock_breaker.1": "它击碎着幽匿的障碍",
-    "mrqx_extra_pack.tooltips.sculk_rock_breaker.2": "每有一点§2幽匿指数§r，造成的伤害+1（上限+100）",
+    "mrqx_extra_pack.tooltips.sculk_rock_breaker.2": "每有一点§3幽匿指数§r，造成的伤害+1（上限+100）",
     "mrqx_extra_pack.tooltips.seaborn_beacon_cpu.1": "指令：重燃灯塔",
     "mrqx_extra_pack.tooltips.seaborn_beacon_cpu.2": "光路织成的网如同星河在海面铺开，逶迤向海洋的最深处，无限远的地方",
     "mrqx_extra_pack.tooltips.seaborn_beacon_cpu.3": "激活后，每点§7算力§r提供+1§1深海§r器官个数",
@@ -670,13 +696,13 @@
     "mrqx_extra_pack.tooltips.sin_and_judgement.1": "此刻，你清楚的意识到，你即是神，你即可代天授命。",
     "mrqx_extra_pack.tooltips.sin_and_judgement.2": "同时触发所有七原罪碎片的§e正面§r效果（无需付出代价），且视作集齐全套",
     "mrqx_extra_pack.tooltips.sin_and_judgement.3": "每天开始时获得§e神恩：一瞥§r，同时清除其他所有神恩相关buff",
-    "mrqx_extra_pack.tooltips.sin_avaritia_mammon.1": "人类拥有思维，拥有无穷尽的欲望和动机,总是永不满足地寻找、占有、创造而又毁灭……",
+    "mrqx_extra_pack.tooltips.sin_avaritia_mammon.1": "人类拥有思维，拥有无穷尽的欲望和动机，总是永不满足地寻找、占有、创造而又毁灭……",
     "mrqx_extra_pack.tooltips.sin_avaritia_mammon.2": "激活时，所有实体和箱子战利品变为两倍",
     "mrqx_extra_pack.tooltips.sin_avaritia_mammon.3": "作为代价，幸运-100%，每隔60秒清除周围所有的掉落物（升级：每清除一个掉落物受到来自自己的真实伤害，伤害值为最大生命值的0.5%）",
     "mrqx_extra_pack.tooltips.sin_avaritia_mammon.4": "§4集齐七原罪，效果将变为两倍或获得升级§r",
     "mrqx_extra_pack.tooltips.sin_gula_beelzebub.1": "有些人类是那样地饥渴，无边的饥渴，永远得不到满足，永远感到空虚……",
     "mrqx_extra_pack.tooltips.sin_gula_beelzebub.2": "激活时，攻击回复伤害值10%的饱和度",
-    "mrqx_extra_pack.tooltips.sin_gula_beelzebub.3": "作为代价，消化效率×10%",
+    "mrqx_extra_pack.tooltips.sin_gula_beelzebub.3": "作为代价，消化效率变为10%",
     "mrqx_extra_pack.tooltips.sin_gula_beelzebub.4": "§4集齐七原罪，效果将变为两倍§r",
     "mrqx_extra_pack.tooltips.sin_invidia_leviathan.1": "人类无边的欲望使得他们对他们察觉之物产生了渴求感，若求之不得，便永不满足……",
     "mrqx_extra_pack.tooltips.sin_invidia_leviathan.2": "激活时，对BOSS造成的伤害增加其最大生命值的10%",
@@ -747,7 +773,7 @@
     "mrqx_extra_pack.tooltips.sundial.2": "白天时，根据时间获得不同增益效果，§6天体§r器官数提供效果等级",
     "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.1": "“全区横着走”",
     "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.2": "每分钟在你身边召唤十五只带有标记的狼",
-    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.3": "造成伤害时，每只狼使伤害+1，狼受到1点伤害",
+    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.3": "造成伤害时，每只狼使伤害+(狼数量)，狼受到1点伤害",
     "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.4": "注意：狼为未驯服状态",
     "mrqx_extra_pack.tooltips.thermal_barrier.1": "升温！升温！升温！",
     "mrqx_extra_pack.tooltips.thermal_barrier.2": "反应开始时，将§c核能动力§r的效果等级提升1级，并降低§e20%§r的时长",
