--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -352,6 +352,7 @@
     "item.kubejs.minotaur_muscle": "牛头人肌肉",
     "item.kubejs.questing_ram_answer": "羊的谜底",
     "item.kubejs.cloud_brocade": "云尖锥",
+    "item.kubejs.creeper_appendix": "苦力怕阑尾",
     "block.irons_spellbooks.blood_cauldron": "盛血的炼药锅",
     "item.irons_spellbooks.eldritch_manuscript": "巫术学派手稿",
     "item.irons_spellbooks.eldritch_manuscript_desc": "右键打开以学习巫术学派的法术",
@@ -1663,6 +1664,10 @@
     "kubejs.tooltips.twilight_broken_lich_crown.5": "根据吞噬的血量回复法力",
     "kubejs.tooltips.twilight_broken_lich_crown.6": "根据吞噬的攻击力提升攻击力",
     "kubejs.tooltips.twilight_broken_lich_crown.7": "提升的效果持续60s",
+    "kubejs.tooltips.creeper_appendix.1": "跟他们爆了！",
+    "kubejs.tooltips.creeper_appendix.2": "按下主动能力按键，在自身位置引发一次爆炸",
+    "kubejs.tooltips.creeper_appendix.3": "爆炸强度和你胸腔中的爆炸和怪异属性有关",
+    "kubejs.tooltips.creeper_appendix.4": "若体温为正，则消耗全部体温大幅提高爆炸威力，并点燃附近地面",
     "kubejs.tooltips.naga_scale.1": "娜迦身上脱落的鳞片",
     "kubejs.tooltips.naga_scale.2": "受伤时，获得速度效果",
     "kubejs.tooltips.minotaur_muscle.1": "不好，有牛！",
